<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title">Title</string>
    <string name="price_numbers_only">Price (Numbers only)</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="new_travel_deal">New Travel Deal</string>
    <string name="delete_deal">Delete Deal</string>
    <string name="log_out">Log Out</string>
    <string name="travel_deal_photo">Travel Deal Photo</string>
    <string name="deal_image">Deal Image</string>
    <string name="upload_image">Upload Image</string>
</resources>
